--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 @@include('header.htm') @@include('blocks/navigation.htm')
 
 <!-- Slider Start -->
-@@include('blocks/slider.htm')
+@@include('blocks/cover.htm')
 <!-- Slider End -->
 
 <!-- Section history Start -->
