agregue los partials de itinerario + historia + detalles de playa lagarto

--- a/source/index.html
+++ b/source/index.html
@@ -12,28 +12,8 @@
 @@include('blocks/itinerario.htm')
 <!-- Section itinerario End -->
 
-<!--section Counter Start -->
-<!-- @@include('blocks/counter.htm') -->
-<!-- section Counter End  -->
-
-<!--  Section Services Start -->
-<!-- @@include('blocks/service.htm') -->
-<!--  Section Services End -->
-
-<!-- Section Pricing Start -->
-<!-- @@include('blocks/pricing.htm') -->
-<!-- Section Pricing End -->
-
-<!--  Section Team Start -->
-<!-- @@include('blocks/team.htm') -->
-<!--  Section Team End -->
-
-<!-- Section Cta Start -->
-<!-- @@include('blocks/call-to-action.htm') -->
-<!--  Section Cta End-->
-
-<!-- Section Blog Start -->
-<!-- @@include('blocks/latest-blog.htm') -->
-<!-- Section Blog End
+<!-- Section playa-lagarto Start -->
+@@include('blocks/playa-lagarto.htm')
+<!-- Section playa-lagarto End -->
 
 @@include('blocks/footer.htm') @@include('footer.htm')
