Save the Date Ready

--- a/source/faq.html
+++ b/source/faq.html
@@ -1,39 +1,120 @@
 @@include('header.htm') @@include('blocks/navigation.htm')
 
-<!-- Slider Start -->
-@@include('blocks/cover.htm')
-<!-- Slider End -->
+@@include('blocks/page-title.htm', {
+    "title": "Preguntas",
+    "description": "Frecuentes",
+    "id":""
+    })
 
-<!-- Section history Start -->
-@@include('blocks/historia.htm')
-<!-- Section history END -->
+    <!-- Section FAQ Start -->
+<section class="section position-relative">
+    <div class="container">       
+       <div class="columns is-multiline is-justify-content-center">
+          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+             <div class="about-info-item mt-4">
+                <h3 class="mb-3">¿Cuando es la fecha máxima para confirmar?</h3>
+                <p>Entre más antes nos avisen es mejor para nosotros, aún así esperamos nos confirmen antes de navidad.</p>
+             </div>
+          </div>
+          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+            <div class="about-info-item mt-4">
+                <h3 class="mb-3">¿Puedo llevar a mi pareja?</h3>
+                <p>Si, dejarnos saber al momento de confirmar.</p>
+                <p>P-A-R-E-J-A-S no el liguecillo de verano.</p>
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Puedo llevar mis hijos?</h3>
+               <p>Mas o menos, aceptamos solo niños de la familia Ureña o Castillo, dejarnos saber al momento de confirmar. Considerar si una niñera o dejarlos en casa con familiares es opción.</p>
+            </div>
+         </div>
+          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Cúal es el código de vestimenta?</h3>
+               <p>Formal de playa. Fresco y cómodo.</p>
+               <p>Mujeres no vestir de negro ni blanco.</p>
+            </div>
+         </div>
+          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Cúal es la recomendación de zapatos?</h3>
+               <p>La fiesta es en la arena y zonas verdes principalmente, considerar no usar zapatos de tacón de aguja ni algo que haga sufrir a los pies.</p>
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Cúal es la recomendación de maquillaje y peinado?</h3>
+               <p>El viento puede ser un factor importante; utilizar el cabello recogido o semirecogido para que no estorbe si el aire es intenso. En cuanto al maquillaje, intente que sea muy delicado y natural para que luzca hermosa y elegante tomando en cuenta que el calor de la playa (o el baile) puede hacerla sudar, y si tiene un maquillaje natural nadie se va a dar cuenta.</p>
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Cómo será el clima?</h3>
+               <p>Bienvenidos a Guananacaste en verano donde el sol brilla y el clima es dulce. Se esperan días soleados, calientes y secos. Algunas personas describen Guana en Febrero como plasenteramente caliente y ventoso.</p>
+            </div>
+         </div>         
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Como es la iglesia de Río Seco?</h3>
+               <p>Sencilla y MUY pequeña, tomarlo en cuenta para participar de la ceremonia.</p>               
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Donde debo parquear?</h3>
+               <p>La iglesia de Río Seco está situada junto a la calle principal a Paraíso, sobre esta misma calle es posible aparcar.</p>
+               <p>En la recepción, el parqueo estará identificado dentro de la finca.</p>
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Es la fiesta bajo techo o al aire libre?</h3>
+               <p>La fiesta es sobre zonas verdes en la playa.</p>               
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Está bien si tomo fotos con el telefono durante la boda?</h3>
+               <p>La vamos a pasar bien, la mejor manera de recordarlo y compartirlo luego es tomando muchas fotos.</p>               
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿Que opciones de regalo puedo pensar?</h3>
+               <p>Estamos agradecidos de que viajen a Guanacaste para celebrar con nosotros nuestro día especial y ese es el mejor regalo que nos pueden dar. LLevamos algún tiempo viviendo juntos y dichosamente nuestro hogar esta completo por lo que no tenemos una lista de regalos tradicional. En cambio, si aún desea hacerlo pedimos que nos dejen sus muestras de cariño en efectivo. Prometemos gastarlo en la luna de miel.</p>
+               <br/>
+               <p>
+                Ivan Castillo Brais - cédula 206120199</small>
+                <br>
+                BAC Dólares 907894984
+                <br>
+                IBAN Dólares CR88010200009078949842
 
-<!-- Section itinerario Start -->
-@@include('blocks/itinerario.htm')
-<!-- Section itinerario End -->
+              </p>
+            </div>
+         </div>
+         <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >            
+            <div class="about-info-item mt-4">
+               <h3 class="mb-3">¿A quien debo llamar si tengo preguntas antes de la boda?</h3>
+               <p>Puede dejarnos saber a Silvia & Ivan.</p>               
+            </div>
+         </div>
+          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="800" >             
+             <div class="about-info-item mt-4">
+                <h3 class="mb-3">Recomendaciones Generales</h3>
+                <p>- El accesorio que no puede faltar a la fiesta son las gafas de sol. No tenga miedo a usarlas de noche.</p>
+                <p>- Si tiene alergias o restricciones de dieta dejarnos saber.</p>
+                <p>- Tome mucha agua durante la celebración.</p>
+                <p>- No olvide usar bloqueador para el sol durante los días previos y el día del evento. Nunca olvide usarlo en general.</p>
+             </div>
+          </div>          
+       </div>
+    </div>
+ </section>
 
-<!--section Counter Start -->
-<!-- @@include('blocks/counter.htm') -->
-<!-- section Counter End  -->
-
-<!--  Section Services Start -->
-<!-- @@include('blocks/service.htm') -->
-<!--  Section Services End -->
-
-<!-- Section Pricing Start -->
-<!-- @@include('blocks/pricing.htm') -->
-<!-- Section Pricing End -->
-
-<!--  Section Team Start -->
-<!-- @@include('blocks/team.htm') -->
-<!--  Section Team End -->
-
-<!-- Section Cta Start -->
-<!-- @@include('blocks/call-to-action.htm') -->
-<!--  Section Cta End-->
-
-<!-- Section Blog Start -->
-<!-- @@include('blocks/latest-blog.htm') -->
-<!-- Section Blog End
+<!-- Section atajos Start -->
+@@include('blocks/atajos.htm')
+<!-- Section atajos End -->
 
 @@include('blocks/footer.htm') @@include('footer.htm')
