--- a/source/index.html
+++ b/source/index.html
@@ -16,4 +16,8 @@
 @@include('blocks/playa-lagarto.htm')
 <!-- Section playa-lagarto End -->
 
+<!-- Section cta-preguntasStart -->
+@@include('blocks/cta-preguntas.htm')
+<!-- Section cta-preguntas End -->
+
 @@include('blocks/footer.htm') @@include('footer.htm')
