--- a/source/faq.html
+++ b/source/faq.html
@@ -19,14 +19,13 @@
           <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
             <div class="about-info-item mt-4">
                 <h3 class="mb-3">¿Puedo llevar a mi pareja?</h3>
-                <p>Si, dejarnos saber al momento de confirmar.</p>
-                <p>P-A-R-E-J-A-S no el liguecillo de verano.</p>
+                <p>Únicamente parejas cofirmadas por Silvia & Ivan.</p>
             </div>
          </div>
          <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
             <div class="about-info-item mt-4">
                <h3 class="mb-3">¿Puedo llevar mis hijos?</h3>
-               <p>Mas o menos, aceptamos solo niños de la familia Ureña o Castillo, dejarnos saber al momento de confirmar. Considerar si una niñera o dejarlos en casa con familiares es opción.</p>
+               <p>Mas o menos, aceptamos solo niños de la familia Ureña o Castillo, dejarnos saber al momento de confirmar.</p>
             </div>
          </div>
           <div class="column is-4-desktop is-6-tablet"  data-aos="fade-up" data-aos-delay="600" >
@@ -85,7 +84,7 @@
                <p>Estamos agradecidos de que viajen a Guanacaste para celebrar con nosotros nuestro día especial y ese es el mejor regalo que nos pueden dar. LLevamos algún tiempo viviendo juntos y dichosamente nuestro hogar esta completo por lo que no tenemos una lista de regalos tradicional. En cambio, si aún desea hacerlo pedimos que nos dejen sus muestras de cariño en efectivo. Prometemos gastarlo en la luna de miel.</p>
                <br/>
                <p>
-                Ivan Castillo Brais - cédula 206120199</small>
+                Ivan Castillo Brais - <small>cédula 206120199</small>
                 <br>
                 BAC Dólares 907894984
                 <br>
